--- a/firebase_restapi/pubspec.yaml
+++ b/firebase_restapi/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pedantic: ^1.11.0
+  firebase_auth_rest: ^2.0.0
+  firebase_database_rest: ^1.0.2
+  flutter_dotenv: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-#  assets:
-#    - images/
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
